--- a/index.html
+++ b/index.html
@@ -3,9 +3,121 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Dimas Wicaksono</title>
+    <link href="vendor/allcss.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-    <h1>Hi, From Dimas Wicaksono</h1>
+    <div class="sidebar bebsneue">
+        <a href="#about">About</a>
+        <a href="#experience">Experience</a>
+        <a href="#education">Education</a>
+        <a href="#skills">Skills</a>
+    </div>
+    <div class="content">
+        <div id="about">
+            <div class="bebsneue centered">
+                <div style="padding-top: 40px;">
+                    <img style="border-radius: 50%;" src="vendor/img/fotoDimas3.png">
+                </div>
+                <h1 class="h1size secondLetter">Dimas <span class="firstLetter">Wicaksono</span></h1>
+                <div>
+                    <a style="text-decoration: none;color: #E94B3CFF" href="tel:+6289605267747">+62 896 052 677 47</a> - 
+                    <a style="text-decoration: none;color: #E94B3CFF" href="mailTo:dimaswicaksono17@gmail.com">dimaswicaksono17@gmail.com</a>
+                </div>
+            </div>
+            <div class="firstLetter" style="font-size: 25px;">
+                <p>Hello! My name is Dimas Panuji Wicaksono. A software developer who has experienced in building website / app for about 3 years. Hardworking person, honest and very enthusiastic about programming. Proficient in HTML, Javascript, CodeIgniter, Slimphp, Golang, Java, Swift, Kotlin, Dart and many more.</p>
+            </div>
+            <div>
+                <a href="https://www.facebook.com/dimas.wicaxono/" target="_blank" class="fa fa-facebook fa-about"></a>
+                <a href="https://www.linkedin.com/in/dimas-wicaxono/" target="_blank" class="fa fa-linkedin fa-about"></a>
+                <a href="https://github.com/dimspawn" target="_blank" class="fa fa-github fa-about"></a>
+            </div>
+        </div>
+        <br />
+        <br />
+        <br />
+        <br />
+        <div id="experience">
+            <h1 class="bebsneue h1sizehalf secondLetter">Experience</h1>
+            <div>
+                <p style="text-align: right;" class="secondLetter">2019 - 2020</p>
+                <h1 class="bebsneue firstLetter">Mobile App Developer</h1>
+                <h2 class="bebsneue firstLetter">Aimsis - PT TER Solusindo</h2>
+                <div class="firstLetter" style="font-size: 25px;">
+                    <p>Maintaining and add some features current Aimsis mobile app using Java for android app and Swift for iOS app</p>
+                </div>
+            </div>
+            <div>
+                <p style="text-align: right;" class="secondLetter">2018 - 2019</p>
+                <h1 class="bebsneue firstLetter">Fullstack Developer</h1>
+                <h2 class="bebsneue firstLetter">Aimsis - PT TER Solusindo</h2>
+                <div class="firstLetter" style="font-size: 25px;">
+                    <p>Maintaining academic information system website of Aimsis using PHP and CodeIgniter</p>
+                </div>
+            </div>
+            <div>
+                <p style="text-align: right;" class="secondLetter">2017 - 2018</p>
+                <h1 class="bebsneue firstLetter">Web App Developer</h1>
+                <h2 class="bebsneue firstLetter">PT Cahaya Kita Grafika</h2>
+                <div class="firstLetter" style="font-size: 25px;">
+                    <p>Build and maintaining accounting web app for company using Javascript and PhoneGap</p>
+                </div>
+            </div>
+        </div>
+        <br />
+        <br />
+        <br />
+        <br />
+        <div id="education">
+            <h1 class="bebsneue h1sizehalf secondLetter">Education</h1>
+            <div>
+                <p style="text-align: right;" class="secondLetter">2010 - 2017</p>
+                <h1 class="bebsneue firstLetter">Institut Pertanian Bogor</h1>
+                <div class="firstLetter" style="font-size: 25px;">
+                    <p>GPA 2.31 / Sarjana Teknik (S.T.)<br />
+                    Jurusan Teknik Mesin dan Biosistem<br />
+                    Fakultas Teknologi Pertanian<br /></p>
+                </div>
+            </div>
+            <div>
+                <p style="text-align: right;" class="secondLetter">2007 - 2010</p>
+                <h1 class="bebsneue firstLetter">SMAN 3 Bandar Lampung</h1>
+                <div class="firstLetter" style="font-size: 25px;">
+                    <p>Jurusan IPA</p>
+                </div>
+            </div>
+            <div>
+                <p style="text-align: right;" class="secondLetter">2004 - 2007</p>
+                <h1 class="bebsneue firstLetter">SMPN 9 Bandar Lampung</h1>
+            </div>
+            <div>
+                <p style="text-align: right;" class="secondLetter">1998 - 2004</p>
+                <h1 class="bebsneue firstLetter">SD KARTIKA II-6 Bandar Lampung</h1>
+            </div>
+        </div>
+        <br />
+        <br />
+        <br />
+        <br />
+        <div id="skills">
+            <h1 class="bebsneue h1sizehalf secondLetter">Skills</h1>
+            <div>
+                <h1 class="bebsneue firstLetter">Web Developement</h1>
+                <div>
+                    <img src="vendor/img/html5.png">
+                    <img src="vendor/img/css3.png">
+                    <img src="vendor/img/javascript.png">
+                    <img src="vendor/img/php.png">
+                </div>
+                <h1 class="bebsneue firstLetter">Mobile App Developement</h1>
+                <div>
+                    <img src="vendor/img/java.png">
+                    <img src="vendor/img/swift.png">
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
