--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         <br />
         <div id="apps">
             <h1 class="bebsneue h1sizehalf secondLetter">Apps</h1>     
-            <a href="https://play.google.com/store/apps/details?id=com.imaginatic.tictactoe" target="_blank">
+            <a href="https://play.app.goo.gl/?link=https://play.google.com/store/apps/details?id=com.imaginatic.tictactoe&ddl=1&pcampaignid=web_ddl_1" target="_blank">
                 <img src="vendor/img/tictactoe_launcher.png" title="Tic Tac Toe">
             </a>
         </div>
