--- a/index.html
+++ b/index.html
@@ -115,7 +115,10 @@
                 <h1 class="bebsneue firstLetter">Mobile App Developement</h1>
                 <div>
                     <img src="vendor/img/java.png">
+                    <img src="vendor/img/kotlin.png">
+                    <img src="vendor/img/dart.png">
                     <img src="vendor/img/swift.png">
+                    <img src="vendor/img/flutter.png">
                 </div>
             </div>
         </div>
