--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <a href="#education">Education</a>
       <a href="#skills">Skills</a>
       <a href="#apps">Apps</a>
+      <a href="https://dimspawn.github.io/imaginatic/">Imaginatic</a>
     </div>
     <div class="content">
       <div id="about">
