add encoder button

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <a href="#skills">Skills</a>
       <a href="#apps">Apps</a>
       <a href="https://dimspawn.github.io/imaginatic/">Imaginatic</a>
+      <a href="https://dimspawn.github.io/encoder/">Encoder</a>
     </div>
     <div class="content">
       <div id="about">
