--- a/index.html
+++ b/index.html
@@ -178,7 +178,23 @@
           href="https://play.app.goo.gl/?link=https://play.google.com/store/apps/details?id=com.imaginatic.tictactoe&ddl=1&pcampaignid=web_ddl_1"
           target="_blank"
         >
-          <img src="vendor/img/tictactoe_launcher.png" title="Tic Tac Toe" />
+          <img
+            src="vendor/img/tictactoe_launcher.png"
+            title="Tic Tac Toe"
+            width="150px"
+            height="150px"
+          />
+        </a>
+        <a
+          href="https://play.app.goo.gl/?link=https://play.google.com/store/apps/details?id=com.imaginatic.figjig&ddl=1&pcampaignid=web_ddl_1"
+          target="_blank"
+        >
+          <img
+            src="vendor/img/figjig.png"
+            title="Fig Jig"
+            width="150px"
+            height="150px"
+          />
         </a>
       </div>
     </div>
