change input type

--- a/encoder/index.html
+++ b/encoder/index.html
@@ -11,7 +11,7 @@
 
     <form method="post">
       <label for="word">Enter Word:</label>
-      <input type="text" id="word" name="word" /><br /><br />
+      <input type="password" id="word" name="word" /><br /><br />
       <p id="resq"></p>
 
       <button type="button" onclick="doEncode()">Submit</button>
