--- a/encoder/index.html
+++ b/encoder/index.html
@@ -13,6 +13,7 @@
       <label for="word">Enter Word:</label>
       <input type="password" id="word" name="word" /><br /><br />
       <p id="resq"></p>
+      <button id="dHide" type="button" onclick="doHide()">Unhide</button>
 
       <button type="button" onclick="doEncode()">Submit</button>
     </form>
@@ -28,8 +29,19 @@
       function doEncode() {
         word = $("#word").val();
         let hash = CryptoJS.MD5(word);
-        hash = hash.toString().substring(0, 16);
+        hash = hash.toString() + "aA1";
         $("#resq").text(hash);
+      }
+
+      function doHide() {
+        let bText = $("#dHide").text();
+        if (bText == "Unhide") {
+          $("#word").attr("type", "text");
+          $("#dHide").html("Hide");
+        } else {
+          $("#word").attr("type", "password");
+          $("#dHide").html("Unhide");
+        }
       }
     </script>
   </body>
