--- a/imaginatic/privacy.html
+++ b/imaginatic/privacy.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>I MA GIN A TIC</title>
+    <title>WicaXono Studio</title>
     <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
@@ -28,12 +28,12 @@
   <body>
     <div class="container">
       <div class="azofont">
-        <h1><i>imaginatic</i></h1>
+        <h1><i>WicaXono Studio</i></h1>
       </div>
       <h2>Privacy Policy</h2>
       <p>
-        Imaginatic built the Tic Tac Toe app as a free app. This Game is
-        provided by imaginatic team and is intended for use as is.<br />
+        We built the Tic Tac Toe app as a free app. This Game is
+        provided by our team and is intended for use as is.<br />
         This page is used to inform website visitors regarding our policies with
         the collection, use, and disclosure of Personal Information if anyone
         decided to use our Service. <br />
