--- a/figjig/privacy.html
+++ b/figjig/privacy.html
@@ -32,7 +32,7 @@
       </div>
       <h2>Privacy Policy</h2>
       <p>
-        We built the Tic Tac Toe app as a free app. This Game is
+        We built the Fig Jig app as a free app. This Game is
         provided by our team and is intended for use as is.<br />
         This page is used to inform website visitors regarding our policies with
         the collection, use, and disclosure of Personal Information if anyone
