--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="google-site-verification" content="fXidDws-s9ZH8af_9LfIYfEEacVs5nxObatBW2n5mPY" />
     <title>Dimas Wicaksono</title>
     <link href="vendor/allcss.css" rel="stylesheet" />
     <link
